[package]
name = "fw_env"
version = "0.1.0"
authors = ["Xavier Bestel <xavier.bestel@free.fr>"]
description = "fw_printenv from U-Boot tools in pure Rust"
license = "MIT"
repository = "https://github.com/bestouff/fw_env"
readme = "README.md"
keywords = [ "u-boot", "uboot", "env", "firmware", "fw_printenv" ]
categories = [ "hardware-support", "embedded", "config" ]
exclude = [ "testfiles/*" ]
edition = "2018"

[dependencies]
scan_fmt = "0.1"
crc = "1"
